fixed misaligned content

--- a/linguist.css
+++ b/linguist.css
@@ -54,8 +54,8 @@ main>div{
 }
 
 .text{
-    height: 100%;
-    width: 100%;
+    height: 90%;
+    width: 90%;
     border: none;
     border-radius: 10px;
     box-shadow: 0 0 5px 2px grey;
